<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nyc.c4q.huilin.ancientocean.MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/messageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/greetings"/>
    <Button
        android:id="@+id/requestBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requiredRequest"/>
    <Button
        android:id="@+id/postBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postRequest"/>
    <Button
        android:id="@+id/previousBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previousRequest"/>
    <Button
        android:id="@+id/brooklynBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeBrooklyn"/>
    <Button
        android:id="@+id/getPersonOneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requestForPersonOne"/>
    <Button
        android:id="@+id/deletePersonBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteRequest"/>



</LinearLayout>
